--- a/client/assets/css/base.css
+++ b/client/assets/css/base.css
@@ -22,6 +22,15 @@ ul {
     margin: 0 auto;
 }
 
+.title {
+    margin-bottom: 24px;
+    font-size: 28px;
+    text-transform: uppercase;
+    color: #213c9f;
+    text-align: center;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+} 
+
 header.header {
     padding: 0 100px;
 }
@@ -101,7 +110,7 @@ header.header {
     margin: 0 auto;
     width: 50px;
     height: 50px;
-    border: 3px solid #213c9f;
+    border: 3px solid #fff;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -110,7 +119,7 @@ header.header {
 
 .info-section .info-wrapper .card-info .card-info-icon i {
     font-size: 20px;
-    color: #fff;
+    color: #213c9f;
 }
 
 .info-section .card-info .card-info-content .card-info-number {
@@ -126,3 +135,31 @@ header.header {
     font-weight: 800;
     text-transform: uppercase;
 }
+
+.g-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 24px;
+}
+
+.g-4 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: .3s ease-in-out;
+}
+
+.g-4:hover {
+    transform: translateY(-10px);
+}
+
+.g-4 .g-img {
+    height: 348px;
+    width: 100%;
+}
+
+.g-4 .g-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
